--- a/src/main/resources/templates/inner/css.html
+++ b/src/main/resources/templates/inner/css.html
@@ -13,6 +13,8 @@
 
     <!-- Toastr style -->
     <link th:href="@{/css/plugins/dataTables/datatables.min.css}" rel="stylesheet">
+    <link th:href="@{/css/plugins/ladda/ladda-themeless.min.css}" rel="stylesheet">
+
 
     <link th:href="@{/css/animate.css}" rel="stylesheet">
     <link th:href="@{/css/style.css}" rel="stylesheet">
