--- a/src/main/resources/templates/inner/js.html
+++ b/src/main/resources/templates/inner/js.html
@@ -16,6 +16,10 @@
 
     <script th:src="@{/js/plugins/iCheck/icheck.min.js}"></script>
 
+    <!-- Ladda -->
+    <script th:src="@{/js/plugins/ladda/spin.min.js}"></script>
+    <script th:src="@{/js/plugins/ladda/ladda.min.js}"></script>
+    <script th:src="@{/js/plugins/ladda/ladda.jquery.min.js}"></script>
 
 </div>
 </html>
