--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -1,16 +1,16 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 
-<head th:include="/inner/css::commonHeader('开始答题')"></head>
+<head th:include="inner/css::commonHeader('开始答题')"></head>
 
 
 <body>
 <div id="wrapper">
     <nav class="navbar-default navbar-static-side" role="navigation">
-        <div th:include="/inner/left::loadLeft"></div>
+        <div th:include="inner/left::loadLeft"></div>
     </nav>
     <div id="page-wrapper" class="gray-bg dashbard-1">
-        <div th:include="/inner/header::loadHeader"></div>
+        <div th:include="inner/header::loadHeader"></div>
 
         <div class="row wrapper border-bottom white-bg page-heading">
             <div class="col-lg-10">
@@ -69,11 +69,11 @@
                 </div>
             </div>
         </div>
-        <div th:include="/inner/footer::loadFooter"></div>
+        <div th:include="inner/footer::loadFooter"></div>
     </div>
 </div>
 
-<div th:include="/inner/js::loadJs"></div>
+<div th:include="inner/js::loadJs"></div>
 <script th:src="@{/js/page/test.js}" ></script>
 
 <script th:inline="javascript">
